no unnecessary exports

--- a/website/tutorial/advanced/02-subscriptions.mdx
+++ b/website/tutorial/advanced/02-subscriptions.mdx
@@ -557,7 +557,7 @@ Next, you need to add the subscription resolver function.
 Add the following Subscription resolver code to `src/schema.ts`:
 
 ```typescript
-export const resolvers = {
+const resolvers = {
   // ... other resolver maps ...
   Subscription: {
     // ... other Subscription field resolvers ...
