--- a/website/tutorial/basic/05-a-simple-mutation.mdx
+++ b/website/tutorial/basic/05-a-simple-mutation.mdx
@@ -16,7 +16,7 @@ Like before, you need to start by adding the new operation to your GraphQL schem
 In `src/schema.ts`, extend the schema definition as follows:
 
 ```ts
-export const typeDefinitions = /* GraphQL */ `
+const typeDefinitions = /* GraphQL */ `
   type Query {
     info: String!
     feed: [Link!]!
