--- a/website/tutorial/basic/10-filtering-and-pagination.mdx
+++ b/website/tutorial/basic/10-filtering-and-pagination.mdx
@@ -212,7 +212,7 @@ const applyTakeConstraints = (params: {
   return params.value
 }
 
-export const resolvers = {
+const resolvers = {
   // ... other resolvers maps ...
   Query: {
     // ... other Query object type resolver functions ...
