--- a/website/tutorial/basic/08-graph-relations.mdx
+++ b/website/tutorial/basic/08-graph-relations.mdx
@@ -115,7 +115,7 @@ Let's start with the `Mutation.postCommentOnLink` resolver, so you can post comm
 Within the `Mutation` object type resolver maps create a new `postCommentOnLink` field resolver function.
 
 ```typescript
-export const resolvers = {
+const resolvers = {
   // ... other resolver maps ...
   Mutation: {
     // ... other field resolver functions
@@ -137,7 +137,7 @@ This is the skeleton of your new field resolver. As you might notice, it looks a
 Add the following business logic within the resolver, that uses the newly generated prisma functions.
 
 ```typescript
-export const resolvers = {
+const resolvers = {
   // ... other resolver maps ...
   Mutation: {
     // ... other field resolver functions
@@ -266,7 +266,7 @@ Instead you will first create resolver for retreiving a comment via it's id.
 Within the `Query` object type resolver map create a new `comment` field resolver function.
 
 ```typescript
-export const resolvers = {
+const resolvers = {
   // ... other resolver maps ...
   Query: {
     // ... other field resolver functions
@@ -289,7 +289,7 @@ Within the resolver you want to fetch the comment by its id.
 Add the corresponding logic for retriving a comment by its id.
 
 ```typescript
-export const resolvers = {
+const resolvers = {
   // ... other resolver maps ...
   Query: {
     // ... other field resolver functions
@@ -400,7 +400,7 @@ Up next you implement the corresponding `Link.comments` resolver. For this you n
 Add the following `Link.resolvers` implementation.
 
 ```typescript
-export const resolvers = {
+const resolvers = {
   // ... other resolver maps ...
   Link: {
     // ... other field resolver functions
