use graphiql early!

--- a/website/tutorial/advanced/01-authentication.mdx
+++ b/website/tutorial/advanced/01-authentication.mdx
@@ -84,7 +84,7 @@ Open the application schema in `src/schema.ts` and update schema types as follow
 
 ```graphql
 type Query {
-  info: String!
+  hello: String!
   feed: [Link!]!
 }
 
@@ -415,7 +415,7 @@ Start by adding the `me` field to the GraphQL schema under `Query`:
 
 ```graphql
 type Query {
-  info: String!
+  hello: String!
   feed: [Link!]!
   me: User!
 }
