--- a/website/tutorial/basic/07-connecting-server-and-database.mdx
+++ b/website/tutorial/basic/07-connecting-server-and-database.mdx
@@ -207,7 +207,7 @@ You may also have noticed that `newLink` is an object of type `Promise`. This is
 
 With these code changes, you can now go ahead and test if the new implementation with a database works as expected. As usual, run the following command in your terminal to start the GraphQL server (`npm run dev`, or `npm start`)
 
-Then, open GraphiQL at `http://localhost:3000/playground`. You can send the same `feed` query and `post` mutation as before. However, the difference is that this time the submitted links will be
+Then, open GraphiQL on `http://localhost:4000/graphql`. You can send the same `feed` query operation and `post` operation mutation as before. However, the difference is that this time the submitted links will be
 persisted in your SQLite database. Therefore, if you restart the server, the `feed` query will keep returning the same links.
 
 <Instruction>
