--- a/website/tutorial/basic/04-a-simple-query.mdx
+++ b/website/tutorial/basic/04-a-simple-query.mdx
@@ -101,7 +101,7 @@ Let's walk through the numbered comments again:
 
 Go ahead and test the implementation by running the server and navigate to `http://localhost:4000/graphql` in your browser. If you expand the documentation of the GraphiQL, you'll notice that another field on the root `Query` object type called `feed` is now available:
 
-![another `Query` root type field called feed](https://i.imgur.com/k60k4BC.png)
+[![another `Query` root type field called feed](/assets/tutorial/basic/04-a-simple-query/hello-world.png)](/assets/tutorial/basic/04-a-simple-query/hello-world.png)
 
 Try it out by sending the following query operation via GraphiQL:
 
@@ -131,7 +131,7 @@ Awesome, the server responds with the data you defined in `links`:
 }
 ```
 
-![data returned from the server](https://i.imgur.com/vmzqOgl.png)
+[![data returned from the server](/assets/tutorial/basic/04-a-simple-query/feed-query-response.png)](/assets/tutorial/basic/04-a-simple-query/feed-query-response.png)
 
 Feel free to play around with the query by removing any fields from the selection set and observe the responses sent by the server.
 
