--- a/website/tutorial/basic/05-a-simple-mutation.mdx
+++ b/website/tutorial/basic/05-a-simple-mutation.mdx
@@ -130,7 +130,7 @@ The server response will look as follows:
 }
 ```
 
-![Mutation response](https://i.imgur.com/MzpLiba.png)
+[![Mutation response](/assets/tutorial/basic/05-a-simple-mutation/post-link-mutation-response.png)](/assets/tutorial/basic/05-a-simple-mutation/post-link-mutation-response.png)
 
 With every mutation you send, the `idCount` will increase and the following IDs for created links will be `link-2`,
 `link-3`, and so forth...
@@ -138,7 +138,7 @@ With every mutation you send, the `idCount` will increase and the following IDs 
 To verify that your mutation worked, you can send the `feed` query operation from before again – it now returns the additional
 Link that you created with the mutation:
 
-![returns the additional Link](https://i.imgur.com/EjRMMiz.png)
+[![returns the additional Link](/assets/tutorial/basic/05-a-simple-mutation/feed-link-query-response.png)](/assets/tutorial/basic/05-a-simple-mutation/feed-link-query-response.png)
 
 However, once you kill and restart the server, you'll notice that the previously added links are now gone and you need
 to add them again. This is because the links are only stored _in-memory_, in the `links` array. In the next sections,
