docs: delete meaningless incrementation

--- a/website/tutorial/basic/05-a-simple-mutation.mdx
+++ b/website/tutorial/basic/05-a-simple-mutation.mdx
@@ -71,7 +71,7 @@ const resolvers = {
 
       // 2
       const link: Link = {
-        id: `link-${idCount++}`,
+        id: `link-${idCount}`,
         description: args.description,
         url: args.url,
       }
