docs: fix postCommentOnLink missing arguments

--- a/website/tutorial/basic/08-graph-relations.mdx
+++ b/website/tutorial/basic/08-graph-relations.mdx
@@ -100,7 +100,7 @@ type Query {
 
 type Mutation {
   postLink(url: String!, description: String!): Link!
-  postCommentOnLink(linkId: ID!): Comment!
+  postCommentOnLink(linkId: ID!, body: String!): Comment!
 }
 ```
 
