--- a/website/tutorial/basic/10-filtering-and-pagination.mdx
+++ b/website/tutorial/basic/10-filtering-and-pagination.mdx
@@ -233,7 +233,7 @@ const resolvers = {
       const take = applyTakeConstraints({
         min: 1,
         max: 50,
-        value: args.skip ?? 30,
+        value: args.take ?? 30,
       })
 
       return context.prisma.link.findMany({
