docs: Fix tutorial typos and wrong usages (#939)
* docs: fix typos that are referencing wrong field names

* docs: delete meaningless incrementation

* docs: fix markdown typo

* docs: fix postCommentOnLink missing arguments

* docs: fix variable name typo

* docs: fix usage of wrong argument

--- a/website/tutorial/basic/10-filtering-and-pagination.mdx
+++ b/website/tutorial/basic/10-filtering-and-pagination.mdx
@@ -140,7 +140,7 @@ const resolvers = {
     // ... other Query object type resolver functions ...
     feed: async (
       parent: unknown,
-      args: { filter?: string; skip?: number; take?: number },
+      args: { filterNeedle?: string; skip?: number; take?: number },
       context: GraphQLContext,
     ) => {
       const where = args.filterNeedle
@@ -218,7 +218,7 @@ const resolvers = {
     // ... other Query object type resolver functions ...
     feed: async (
       parent: unknown,
-      args: { filter?: string; skip?: number; take?: number },
+      args: { filterNeedle?: string; skip?: number; take?: number },
       context: GraphQLContext,
     ) => {
       const where = args.filterNeedle
@@ -233,7 +233,7 @@ const resolvers = {
       const take = applyTakeConstraints({
         min: 1,
         max: 50,
-        value: args.skip ?? 30,
+        value: args.take ?? 30,
       })
 
       return context.prisma.link.findMany({
