--- a/website/docs/features/graphiql.mdx
+++ b/website/docs/features/graphiql.mdx
@@ -33,7 +33,7 @@ server.start()
 You can disable GraphiQL simply setting the `graphiql` option to `false`.
 
 ```ts
-import { createServer } from 'graphql-yoga'
+import { createServer } from '@graphql-yoga/node'
 
 // Provide your schema
 const server = createServer({
@@ -43,10 +43,31 @@ const server = createServer({
 server.start()
 ```
 
+## Dynamic Options
+
+You can also dynamically set GraphiQL options;
+
+```ts
+import { createServer } from '@graphql-yoga/node'
+
+// Provide your schema
+const server = createServer({
+  graphiql: (request: Request, { req, res }) {
+    if (request.headers.get('graphiql-enabled')) {
+      return true;
+    } else {
+      return false;
+    }
+  },
+})
+// Start the server and explore http://localhost:4000/graphql
+server.start()
+```
+
 > Be aware that this does not really make your GraphQL server more secure. As long as the introspection and/or the "did you mean x" suggestion feature of GraphQL are enabled.
 
 ```ts
-import { createServer } from 'graphql-yoga'
+import { createServer } from '@graphql-yoga/node'
 import { useDisableIntrospection } from '@envelop/disable-introspection'
 
 // Provide your schema
