--- a/website/docs/integrations/integration-with-nextjs.mdx
+++ b/website/docs/integrations/integration-with-nextjs.mdx
@@ -17,8 +17,12 @@ sidebar_label: Next.js
 ```ts
 // Next.js API route support: https://nextjs.org/docs/api-routes/introduction
 import { createServer } from '@graphql-yoga/node'
+import { NextApiRequest, NextApiResponse } from 'next'
 
-const server = createServer({
+const server = createServer<{
+  req: NextApiRequest
+  res: NextApiResponse
+}>({
   cors: false,
   endpoint: '/api/graphql',
 })
