Simpler Integration/Usage

--- a/website/docs/integrations/integration-with-deno.mdx
+++ b/website/docs/integrations/integration-with-deno.mdx
@@ -18,7 +18,7 @@ import { createServer } from 'https://cdn.skypack.dev/@graphql-yoga/common@beta?
 
 const graphQLServer = createServer()
 
-serve((req) => graphQLServer.handleRequest(req), {
+serve(graphQLServer, {
   addr: ':4000',
 })
 
