--- a/website/docs/migration/migration-from-apollo-server.mdx
+++ b/website/docs/migration/migration-from-apollo-server.mdx
@@ -60,5 +60,5 @@ For example, if you are using **Express**, you should remove `server.start()` fr
 
 ```diff
 - server.applyMiddleware({ app })
-+ app.use('/graphql', graphQLServer.requestListener)
++ app.use('/graphql', server)
 ```
