--- a/website/docs/integrations/integration-with-aws-lambda.mdx
+++ b/website/docs/integrations/integration-with-aws-lambda.mdx
@@ -26,11 +26,11 @@ import type { Handler } from '@aws-cdk/aws-lambda'
 import { createServer } from '@graphql-yoga/node'
 import { configure } from '@vendia/serverless-express'
 
-const server = createServer()
+const app = createServer()
 
 export const handler: Handler = configure({
-  // Pass Yoga's Request Listener
-  app: server.requestListener,
+  // Pass Yoga as app
+  app,
   // Pass Yoga's logger to listen to the logs from Serverless Express as well
   log: server.logger,
 })
