--- a/website/docs/integrations/integration-with-cloudflare-workers.mdx
+++ b/website/docs/integrations/integration-with-cloudflare-workers.mdx
@@ -21,9 +21,7 @@ import { createServer } from '@graphql-yoga/common'
 
 const server = createServer()
 
-self.addEventListener('fetch', (event: FetchEvent) => {
-  event.respondWith(server.handleRequest(event.request))
-})
+server.start()
 ```
 
 > You can also check a full example on our GitHub repository [here](https://github.com/dotansimha/graphql-yoga/tree/master/examples/cloudflare-modules)
@@ -37,9 +35,7 @@ import { createServer } from '@graphql-yoga/common'
 
 const yoga = createServer()
 
-export default {
-  fetch: yoga.handleRequest,
-}
+export default yoga
 ```
 
 > You can also check a full example on our GitHub repository [here](https://github.com/dotansimha/graphql-yoga/tree/master/examples/service-worker)
