--- a/website/docs/integrations/integration-with-nextjs.mdx
+++ b/website/docs/integrations/integration-with-nextjs.mdx
@@ -34,7 +34,7 @@ export const config = {
   },
 }
 
-export default server.requestListener
+export default server
 ```
 
 > You can also check a full example on our GitHub repository [here](https://github.com/dotansimha/graphql-yoga/tree/master/examples/nextjs)
