--- a/website/docs/integrations/integration-with-sveltekit.mdx
+++ b/website/docs/integrations/integration-with-sveltekit.mdx
@@ -24,7 +24,7 @@ Create the file `src/routes/api/graphql.ts`:
 import { createServer } from '@graphql-yoga/common'
 import type { RequestEvent } from '@sveltejs/kit'
 
-const yogaApp = createServer({
+const yogaApp = createServer<RequestEvent>({
   schema: {
     typeDefs: `
 			type Query {
@@ -42,11 +42,7 @@ const yogaApp = createServer({
   },
 })
 
-// Second parameter adds SvelteKit's RequestEvent into GraphQL Context
-const requestEventHandler = (event: RequestEvent) =>
-  yogaApp.handleRequest(event.request, event)
-
-export { requestEventHandler as get, requestEventHandler as post }
+export { yogaApp as get, yogaApp as post }
 ```
 
 > You can also check a full example on our GitHub repository [here](https://github.com/dotansimha/graphql-yoga/tree/master/examples/sveltekit)
