--- a/website/docs/migration/migration-from-express-graphql.mdx
+++ b/website/docs/migration/migration-from-express-graphql.mdx
@@ -38,7 +38,7 @@ const app = express();
 +   graphiql: true,
 +})
 +
-+app.use('/graphql', yoga.requestListener);
++app.use('/graphql', yoga);
 
 app.listen(4000);
 console.log('Running a GraphQL API server at http://localhost:4000/graphql');
