--- a/website/docs/testing.mdx
+++ b/website/docs/testing.mdx
@@ -4,9 +4,7 @@ title: Testing
 sidebar_label: Testing
 ---
 
-GraphQL Yoga makes it easy to test your GraphQL API. It has built-in support for HTTP injection.
-
-Let's write test for our [Hello World GraphQL API](/docs/quick-start#create-a-hello-world-graphql-api). You can use any testing framework of your choice.
+GraphQL Yoga makes it easy to test your GraphQL API. It has built-in support for HTTP injection. You can use any testing framework of your choice.
 
 ## Using `inject`
 
