doc: update install instructions for 2.0

--- a/website/docs/features/apollo-federation.mdx
+++ b/website/docs/features/apollo-federation.mdx
@@ -17,7 +17,7 @@ Thanks to [Envelop's Apollo Federation](https://www.envelop.dev/plugins/use-apol
 
 <PackageInstall
   packages={[
-    '@graphql-yoga/node@beta',
+    '@graphql-yoga/node',
     '@apollo/gateway',
     '@envelop/apollo-federation',
     'graphql@15',
@@ -62,7 +62,7 @@ You don't need any extra plugins for Yoga for Federation Service.
 ### Installation
 
 <PackageInstall
-  packages={['@graphql-yoga/node@beta', '@apollo/subgraph', 'graphql']}
+  packages={['@graphql-yoga/node', '@apollo/subgraph', 'graphql']}
 />
 
 ### Example User Service
