--- a/website/docs/integrations/integration-with-aws-lambda.mdx
+++ b/website/docs/integrations/integration-with-aws-lambda.mdx
@@ -10,11 +10,7 @@ In order to reduce the boilerplate we prefer to use [Serverless Express from Ven
 ## Installation
 
 <PackageInstall
-  packages={[
-    'graphql',
-    '@vendia/serverless-express',
-    '@graphql-yoga/node@beta',
-  ]}
+  packages={['graphql', '@vendia/serverless-express', '@graphql-yoga/node']}
 />
 
 ## Example
