--- a/website/docs/quick-start.mdx
+++ b/website/docs/quick-start.mdx
@@ -10,7 +10,7 @@ GraphQL Yoga is a batteries-included cross-platform [GraphQL over HTTP spec-comp
 
 > When using Node.js we recommend using version **17** with `--experimental-fetch` flag. Using an older LTS version (such as 14) is still possible, but requires polyfilling APIs when using some features of GraphQL Yoga. You will receive user-friendly error messages that guide you on installing those polyfills.
 
-<PackageInstall packages={['graphql', '@graphql-yoga/node@beta']} />
+<PackageInstall packages={['graphql', '@graphql-yoga/node']} />
 
 ## Create a Hello World GraphQL API
 
