--- a/website/tutorial/basic/03-graphql-server.mdx
+++ b/website/tutorial/basic/03-graphql-server.mdx
@@ -19,7 +19,7 @@ In this tutorial, we will be using `@graphql-yoga/node` for building our Node.js
 You'll need the `@graphql-yoga/node` package available in your project, so install it using the following command:
 
 ```bash
-npm install --save --exact @graphql-yoga/node@beta
+npm install --save --exact @graphql-yoga/node
 ```
 
 </Instruction>
