--- a/website/docs/integrations/integration-with-deno.mdx
+++ b/website/docs/integrations/integration-with-deno.mdx
@@ -14,7 +14,7 @@ But instead of `graphql-yoga` npm package, we will use `@graphql-yoga/common` wh
 
 ```ts
 import { serve } from 'https://deno.land/std@0.117.0/http/server.ts'
-import { createServer } from 'https://cdn.skypack.dev/@graphql-yoga/common@beta?dts'
+import { createServer } from 'https://cdn.skypack.dev/@graphql-yoga/common?dts'
 
 const graphQLServer = createServer()
 
