--- a/website/docs/integrations/integration-with-fastify.mdx
+++ b/website/docs/integrations/integration-with-fastify.mdx
@@ -12,7 +12,7 @@ So you can benefit from the powerful plugins of Fastify ecosystem with GraphQL Y
 
 ## Installation
 
-<PackageInstall packages={['fastify', 'graphql', '@graphql-yoga/node@beta']} />
+<PackageInstall packages={['fastify', 'graphql', '@graphql-yoga/node']} />
 
 ## Example
 
