--- a/website/docs/integrations/integration-with-sveltekit.mdx
+++ b/website/docs/integrations/integration-with-sveltekit.mdx
@@ -12,7 +12,7 @@ You can add GraphQL Yoga with a few lines of code and get the benefits of GraphQ
 
 In a SvelteKit project:
 
-<PackageInstall packages={['graphql', '@graphql-yoga/common@beta']} />
+<PackageInstall packages={['graphql', '@graphql-yoga/common']} />
 
 ## Example
 
