--- a/website/docs/migration/migration-from-apollo-server.mdx
+++ b/website/docs/migration/migration-from-apollo-server.mdx
@@ -8,7 +8,7 @@ sidebar_label: Apollo Server
 
 You can start with installing `graphql-yoga` package.
 
-<PackageInstall packages={['@graphql-yoga/node@beta']} />
+<PackageInstall packages={['@graphql-yoga/node']} />
 
 ### Install equivalent **Envelop** plugins of the Apollo Server
 
