--- a/website/docs/migration/migration-from-express-graphql.mdx
+++ b/website/docs/migration/migration-from-express-graphql.mdx
@@ -8,7 +8,7 @@ sidebar_label: Express GraphQL
 
 You can start with installing `graphql-yoga` package.
 
-<PackageInstall packages={['@graphql-yoga/node@beta']} />
+<PackageInstall packages={['@graphql-yoga/node']} />
 
 ## Replace Express GraphQL's middleware
 
