Add missing link

--- a/website/docs/features/context.mdx
+++ b/website/docs/features/context.mdx
@@ -4,7 +4,7 @@ title: Context in GraphQL Yoga
 sidebar_label: Context in Yoga
 ---
 
-Context is an object in GraphQL-js that is provided per execution and it is passed to the resolvers as a third argument. You can learn more about `Context` in GraphQL-js docs.
+Context is an object in GraphQL-js that is provided per execution and it is passed to the resolvers as a third argument. You can learn more about [`Context` in GraphQL Tools docs](https://www.graphql-tools.com/docs/connectors).
 
 In GraphQL Yoga, context object is generated per HTTP request, and the content of this object differs based on your setup.
 
