--- a/website/docs/features/context.mdx
+++ b/website/docs/features/context.mdx
@@ -6,17 +6,21 @@ sidebar_label: Context in Yoga
 
 Context is an object in GraphQL-js that is provided per execution and it is passed to the resolvers as a third argument. You can learn more about [`Context` in GraphQL Tools docs](https://www.graphql-tools.com/docs/connectors).
 
-In GraphQL Yoga, context object is generated per HTTP request, and the content of this object differs based on your setup.
+In GraphQL Yoga, the context object is generated per HTTP request, and the content of this object differs based on your setup.
+
+There are 4 steps that GraphQL Yoga follows to generate the final context object;
+
+[Initial Standard Context](#initial-standard-context) -> [Server Context](#server-context) -> [User Context](#user-context) -> [Envelop Plugins](#envelop-plugins)
 
 ## Initial Standard Context
 
-By default, GraphQL Yoga provides the following values in the context object independent from your environment and setup;
+By default, GraphQL Yoga provides the following values in the context object independently from your environment and setup;
 
-    - `query`: The DocumentNode that was parsed from the GraphQL query string.
-    - `request`: [WHATWG `Request` object](https://developer.mozilla.org/en-US/docs/Web/API/Request) that represents the incoming HTTP request in platform independent way.
-    - `operationName`: The operation name selected from the incoming query.
-    - `variables`: The variables that were defined in the query
-    - `extensions`: The extensions that were received from the client
+- **_query_**: The DocumentNode that was parsed from the GraphQL query string.
+- **_request_**: [WHATWG `Request` object](https://developer.mozilla.org/en-US/docs/Web/API/Request) that represents the incoming HTTP request in platform independent way.
+- **_operationName_**: The operation name selected from the incoming query.
+- **_variables_**: The variables that were defined in the query
+- **_extensions_**: The extensions that were received from the client
 
 ## Server Context
 
@@ -26,17 +30,17 @@ While creating the server instance, GraphQL Yoga accepts an additional object fr
 
 If you are using GraphQL Yoga as a standalone server with `.start()` method or exposing it as a middleware like we show in our Express and Next.js recipes;
 
-    - `req`: [Node.js `IncomingMessage` object](https://nodejs.org/api/http.html#http_class_http_incomingmessage)
-    - `res`: [Node.js `ServerResponse` object](https://nodejs.org/api/http.html#http_class_http_serverresponse)
+- **_req_**: [Node.js `IncomingMessage` object](https://nodejs.org/api/http.html#http_class_http_incomingmessage)
+- **_res_**: [Node.js `ServerResponse` object](https://nodejs.org/api/http.html#http_class_http_serverresponse)
 
 The `req` and `res` objects are merged into the initial context object.
 
 ### For advanced Node.js frameworks like Fastify and Koa
 
-You might notice that we are implementing a middleware for more complicated server frameworks like Fastify and Koa because they need to handle received responses.
-So they limit our access to the underlying raw `ServerResponse` object then in this case we pass our custom context as the second parameter of `.handleIncomingMessage` method.
+You might notice that we are implementing a custom middleware for more complicated server frameworks like Fastify and Koa because they need to handle received responses on their own, so we cannot use a basic Node.js [RequestListener](https://nodejs.org/api/http.html#http_class_http_incomingmessage) function.
+Since they limit our access to the underlying raw `ServerResponse` object, we use `.handleIncomingMessage` method and pass the server context as a second parameter;
 
-For Fastify, we do the following;
+For **_Fastify_**, we do the following;
 
 ```ts
 const response = await graphQLServer.handleIncomingMessage(req, {
@@ -47,7 +51,7 @@ const response = await graphQLServer.handleIncomingMessage(req, {
 
 and the context now has `reply` instead of `res`;
 
-    - `reply`: [Fastify `Reply` object](https://www.fastify.io/docs/latest/Reply/)
+- **_reply_**: [Fastify `Reply` object](https://www.fastify.io/docs/latest/Reply/)
 
 Also please check our generic definition in `createServer` call to have a type safety;
 
