Avoid extra 'Yoga' word in sideba\r

--- a/website/docs/features/context.mdx
+++ b/website/docs/features/context.mdx
@@ -1,7 +1,7 @@
 ---
 id: context
-title: Context in GraphQL Yoga
-sidebar_label: Context in Yoga
+title: Context Objects in GraphQL Yoga
+sidebar_label: Context Object
 ---
 
 Context is an object in GraphQL-js that is provided per execution and it is passed to the resolvers as a third argument. You can learn more about [`Context` in GraphQL Tools docs](https://www.graphql-tools.com/docs/connectors).
