--- a/website/docs/features/other.mdx
+++ b/website/docs/features/other.mdx
@@ -19,7 +19,7 @@ export function myMiddleware(req: MyRandomRequest, ctx: MyRandomCtx) {
   const request = new Request(req.url, {
     method: req.method,
     headers: req.headers,
-    body: req.body, // req.body should be a valid BodyInit like a string or a Buffer etc...
+    body: req.body, // req.body should be a valid BodyInit like an AsyncIterable, a ReadableStream, a Node.js Readable, a string or a Buffer etc...
   })
 
   // Second parameter becomes your server context
@@ -40,7 +40,8 @@ export function myMiddleware(req: MyRandomRequest, ctx: MyRandomCtx) {
     // static responses will disable subscriptions
     // body: await response.text() If it accepts a string
     // body: await response.json() If it accepts a json
-    // body: response.body if it accepts a ReadableStream
+    // body: response.body if it accepts a ReadableStream or an AsyncIterable
+    // body: Readable.from(response.body) if it accepts a Node.js Readable
     headers: response.headers,
   }
 }
