--- a/website/docs/features/other.mdx
+++ b/website/docs/features/other.mdx
@@ -42,7 +42,7 @@ export function myMiddleware(req: MyRandomRequest, ctx: MyRandomCtx) {
     // body: await response.json() If it accepts a json
     // body: response.body if it accepts a ReadableStream or an AsyncIterable
     // body: Readable.from(response.body) if it accepts a Node.js Readable
-    headers: response.headers,
+    headers: headersObj, // We assume that your environments accepts a regular JS object for response headers
   }
 }
 ```
