--- a/website/docs/features/other.mdx
+++ b/website/docs/features/other.mdx
@@ -6,7 +6,7 @@ sidebar_label: Other Environments
 
 If you have a different environment that you want to integrate with, you can implement your middleware/handler like the example below.
 
-GraphQL Yoga understands [WHATWG `Request` object](https://developer.mozilla.org/en-US/docs/Web/API/Request) object to consume your HTTP request. Let's say your environment exposes something like below;
+GraphQL Yoga understands [WHATWG `Request` object](https://developer.mozilla.org/en-US/docs/Web/API/Request) object to consume your HTTP request. So you need an adapter implementation between your environment and WHATWG standard objects.
 
 ```ts
 import { createServer } from '@graphql-yoga/common'
