--- a/website/docs/integrations/integration-with-sveltekit.mdx
+++ b/website/docs/integrations/integration-with-sveltekit.mdx
@@ -1,6 +1,6 @@
 ---
 id: integration-with-sveltekit
-title: integration with SvelteKit
+title: Integration with SvelteKit
 sidebar_label: SvelteKit
 ---
 
@@ -45,4 +45,7 @@ const yogaApp = createServer<RequestEvent>({
 export { yogaApp as get, yogaApp as post }
 ```
 
-> You can also check a full example on our GitHub repository [here](https://github.com/dotansimha/graphql-yoga/tree/master/examples/sveltekit)
+> **Simple example** on our GitHub repository [here](https://github.com/dotansimha/graphql-yoga/tree/master/examples/sveltekit)
+
+> More examples with our **KitQL** library [here](https://github.com/jycouet/kitql) <br />
+> The best of all GraphQL ecosystem for SvelteKit.
