--- a/website/docs/features/error-masking.mdx
+++ b/website/docs/features/error-masking.mdx
@@ -251,7 +251,7 @@ query {
 
 ## Error codes and other extensions
 
-Sometimes it is useful to enrich errors with additional information such as an error code that can be interpreted by the client.
+Sometimes it is useful to enrich errors with additional information, such as an error code that can be interpreted by the client.
 
 Error extensions can be passed as the second parameter to the `GraphQLYogaError` constructor.
 
